--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -31,6 +31,7 @@ endorsed.classpath=
 excludes=
 file.reference.commons-codec-1.11.jar=C:\\Users\\dev\\Desktop\\lib\\commons-codec-1.11.jar
 file.reference.commons-logging-1.2.jar=C:\\Users\\dev\\Desktop\\lib\\commons-logging-1.2.jar
+file.reference.controlsfx-8.40.13.jar=C:\\Users\\dev\\Desktop\\controlsfx\\controlsfx-8.40.13.jar
 file.reference.fluent-hc-4.5.7.jar=C:\\Users\\dev\\Desktop\\lib\\fluent-hc-4.5.7.jar
 file.reference.gson-2.8.5.jar=C:\\Users\\dev\\Downloads\\gson-2.8.5.jar
 file.reference.httpclient-4.5.7.jar=C:\\Users\\dev\\Desktop\\lib\\httpclient-4.5.7.jar
@@ -60,7 +61,8 @@ javac.classpath=\
     ${file.reference.httpmime-4.5.7.jar}:\
     ${file.reference.jna-4.5.2.jar}:\
     ${file.reference.jna-platform-4.5.2.jar}:\
-    ${file.reference.gson-2.8.5.jar}
+    ${file.reference.gson-2.8.5.jar}:\
+    ${file.reference.controlsfx-8.40.13.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
