--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -43,6 +43,7 @@ file.reference.httpmime-4.5.7.jar=C:\\Users\\dev\\Desktop\\lib\\httpmime-4.5.7.j
 file.reference.jfoenix-9.0.8.jar=C:\\Users\\dev\\Downloads\\jfoenix-9.0.8.jar
 file.reference.jna-4.5.2.jar=C:\\Users\\dev\\Desktop\\lib\\jna-4.5.2.jar
 file.reference.jna-platform-4.5.2.jar=C:\\Users\\dev\\Desktop\\lib\\jna-platform-4.5.2.jar
+file.reference.tyrus-standalone-client-1.9.jar=C:\\Users\\dev\\Downloads\\tyrus-standalone-client-1.9.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -62,7 +63,8 @@ javac.classpath=\
     ${file.reference.jna-4.5.2.jar}:\
     ${file.reference.jna-platform-4.5.2.jar}:\
     ${file.reference.gson-2.8.5.jar}:\
-    ${file.reference.controlsfx-8.40.13.jar}
+    ${file.reference.controlsfx-8.40.13.jar}:\
+    ${file.reference.tyrus-standalone-client-1.9.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
