--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 # NetBeans specific #
 nbproject/private/
+nbproject/
 build/
 nbbuild/
 dist/
 nbdist/
+.nb-gradle/
 nbactions.xml
 nb-configuration.xml
 
