--- a/build.xml
+++ b/build.xml
@@ -42,7 +42,20 @@
                 ...
             </fx:jar>
         </target>
-
+        
+    <target name="-post-jfx-deploy">
+        <fx:deploy width="${javafx.run.width}" height="${javafx.run.height}"
+                   nativeBundles="all"
+                   outdir="${basedir}/${dist.dir}" outfile="${application.title}">
+            <fx:application name="${application.title}"
+                            mainClass="${javafx.main.class}"/>
+            <fx:resources>
+                <fx:fileset dir="${basedir}/${dist.dir}" includes="*.jar"/>
+            </fx:resources>
+            <fx:info title="${application.title}" vendor="${application.vendor}"/>
+        </fx:deploy>
+    </target>
+    
     For more details about JavaFX SDK Ant tasks go to
     http://docs.oracle.com/javafx/2/deployment/jfxpub-deployment.htm
 
