--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,22 +29,77 @@ dist.jar=${dist.dir}/studio.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.animal-sniffer-annotations-1.14.jar=C:\\Users\\dev\\Desktop\\selenium\\animal-sniffer-annotations-1.14.jar
+file.reference.byte-buddy-1.8.15.jar=C:\\Users\\dev\\Desktop\\selenium\\byte-buddy-1.8.15.jar
+file.reference.checker-compat-qual-2.0.0.jar=C:\\Users\\dev\\Desktop\\selenium\\checker-compat-qual-2.0.0.jar
+file.reference.client-combined-3.141.59-sources.jar=C:\\Users\\dev\\Desktop\\lib\\client-combined-3.141.59-sources.jar
+file.reference.client-combined-3.141.59.jar=C:\\Users\\dev\\Desktop\\client-combined-3.141.59.jar
+file.reference.client-combined-3.141.59.jar-1=C:\\Users\\dev\\Desktop\\lib\\client-combined-3.141.59.jar
+file.reference.commons-codec-1.10.jar=C:\\Users\\dev\\Desktop\\selenium\\commons-codec-1.10.jar
 file.reference.commons-codec-1.11.jar=C:\\Users\\dev\\Desktop\\lib\\commons-codec-1.11.jar
+file.reference.commons-exec-1.3.jar=C:\\Users\\dev\\Desktop\\selenium\\commons-exec-1.3.jar
+file.reference.commons-io-2.6.jar=C:\\Users\\dev\\Desktop\\selenium\\commons-io-2.6.jar
+file.reference.commons-lang3-3.8.jar=C:\\Users\\dev\\Desktop\\selenium\\commons-lang3-3.8.jar
 file.reference.commons-logging-1.2.jar=C:\\Users\\dev\\Desktop\\lib\\commons-logging-1.2.jar
+file.reference.commons-logging-1.2.jar-1=C:\\Users\\dev\\Desktop\\selenium\\commons-logging-1.2.jar
+file.reference.commons-net-3.6.jar=C:\\Users\\dev\\Desktop\\selenium\\commons-net-3.6.jar
+file.reference.commons-text-1.4.jar=C:\\Users\\dev\\Desktop\\selenium\\commons-text-1.4.jar
 file.reference.controlsfx-8.40.13.jar=C:\\Users\\dev\\Desktop\\controlsfx\\controlsfx-8.40.13.jar
+file.reference.engine.io-client-1.0.0.jar=C:\\Users\\dev\\Desktop\\lib\\engine.io-client-1.0.0.jar
+file.reference.error_prone_annotations-2.1.3.jar=C:\\Users\\dev\\Desktop\\selenium\\error_prone_annotations-2.1.3.jar
 file.reference.fluent-hc-4.5.7.jar=C:\\Users\\dev\\Desktop\\lib\\fluent-hc-4.5.7.jar
 file.reference.gson-2.8.5.jar=C:\\Users\\dev\\Downloads\\gson-2.8.5.jar
+file.reference.guava-23.0.jar=C:\\Users\\dev\\Desktop\\lib\\guava-23.0.jar
+file.reference.guava-25.0-jre.jar=C:\\Users\\dev\\Desktop\\selenium\\guava-25.0-jre.jar
+file.reference.htmlunit-2.33-OSGi.jar=C:\\Users\\dev\\Desktop\\lib\\htmlunit-2.33-OSGi.jar
+file.reference.htmlunit-2.33.jar=C:\\Users\\dev\\Desktop\\selenium\\htmlunit-2.33.jar
+file.reference.htmlunit-core-js-2.33.jar=C:\\Users\\dev\\Desktop\\selenium\\htmlunit-core-js-2.33.jar
+file.reference.htmlunit-cssparser-1.2.0.jar=C:\\Users\\dev\\Desktop\\selenium\\htmlunit-cssparser-1.2.0.jar
+file.reference.htmlunit-driver-2.33.3.jar=C:\\Users\\dev\\Desktop\\selenium\\htmlunit-driver-2.33.3.jar
+file.reference.htmlunit-driver-2.33.3.jar-1=C:\\Users\\dev\\Desktop\\lib\\htmlunit-driver-2.33.3.jar
+file.reference.httpclient-4.5.6.jar=C:\\Users\\dev\\Desktop\\selenium\\httpclient-4.5.6.jar
 file.reference.httpclient-4.5.7.jar=C:\\Users\\dev\\Desktop\\lib\\httpclient-4.5.7.jar
 file.reference.httpclient-cache-4.5.7.jar=C:\\Users\\dev\\Desktop\\lib\\httpclient-cache-4.5.7.jar
 file.reference.httpclient-osgi-4.5.7.jar=C:\\Users\\dev\\Desktop\\lib\\httpclient-osgi-4.5.7.jar
 file.reference.httpclient-win-4.5.7.jar=C:\\Users\\dev\\Desktop\\lib\\httpclient-win-4.5.7.jar
+file.reference.httpcore-4.4.10.jar=C:\\Users\\dev\\Desktop\\selenium\\httpcore-4.4.10.jar
 file.reference.httpcore-4.4.11.jar=C:\\Users\\dev\\Desktop\\lib\\httpcore-4.4.11.jar
+file.reference.httpmime-4.5.6.jar=C:\\Users\\dev\\Desktop\\selenium\\httpmime-4.5.6.jar
 file.reference.httpmime-4.5.7.jar=C:\\Users\\dev\\Desktop\\lib\\httpmime-4.5.7.jar
+file.reference.j2objc-annotations-1.1.jar=C:\\Users\\dev\\Desktop\\selenium\\j2objc-annotations-1.1.jar
+file.reference.jackson-core-2.8.7.jar=C:\\Users\\dev\\Desktop\\sentry\\jackson-core-2.8.7.jar
+file.reference.jetty-client-9.4.12.v20180830.jar=C:\\Users\\dev\\Desktop\\selenium\\jetty-client-9.4.12.v20180830.jar
+file.reference.jetty-http-9.4.12.v20180830.jar=C:\\Users\\dev\\Desktop\\selenium\\jetty-http-9.4.12.v20180830.jar
+file.reference.jetty-io-9.4.12.v20180830.jar=C:\\Users\\dev\\Desktop\\selenium\\jetty-io-9.4.12.v20180830.jar
+file.reference.jetty-util-9.4.12.v20180830.jar=C:\\Users\\dev\\Desktop\\selenium\\jetty-util-9.4.12.v20180830.jar
+file.reference.jetty-xml-9.4.12.v20180830.jar=C:\\Users\\dev\\Desktop\\selenium\\jetty-xml-9.4.12.v20180830.jar
 file.reference.jfoenix-8.0.8.jar=C:\\Users\\dev\\Downloads\\jfoenix-8.0.8.jar
 file.reference.jfoenix-9.0.8.jar=C:\\Users\\dev\\Downloads\\jfoenix-9.0.8.jar
 file.reference.jna-4.5.2.jar=C:\\Users\\dev\\Desktop\\lib\\jna-4.5.2.jar
 file.reference.jna-platform-4.5.2.jar=C:\\Users\\dev\\Desktop\\lib\\jna-platform-4.5.2.jar
+file.reference.json-20090211.jar=C:\\Users\\dev\\Desktop\\lib\\json-20090211.jar
+file.reference.jsr305-1.3.9.jar=C:\\Users\\dev\\Desktop\\selenium\\jsr305-1.3.9.jar
+file.reference.neko-htmlunit-2.33.jar=C:\\Users\\dev\\Desktop\\selenium\\neko-htmlunit-2.33.jar
+file.reference.okhttp-3.11.0.jar=C:\\Users\\dev\\Desktop\\selenium\\okhttp-3.11.0.jar
+file.reference.okhttp-3.13.1.jar=C:\\Users\\dev\\Desktop\\lib\\okhttp-3.13.1.jar
+file.reference.okhttp-3.8.1.jar=C:\\Users\\dev\\Desktop\\lib\\okhttp-3.8.1.jar
+file.reference.okio-1.14.0.jar=C:\\Users\\dev\\Desktop\\selenium\\okio-1.14.0.jar
+file.reference.pusher-java-client-1.8.1.jar=C:\\Users\\dev\\Desktop\\lib\\pusher-java-client-1.8.1.jar
+file.reference.pusher-java-client-1.8.2.jar=C:\\Users\\dev\\Desktop\\lib\\pusher-java-client-1.8.2.jar
+file.reference.selenium-api-3.141.59.jar=C:\\Users\\dev\\Desktop\\selenium\\selenium-api-3.141.59.jar
+file.reference.selenium-remote-driver-3.141.59.jar=C:\\Users\\dev\\Desktop\\selenium\\selenium-remote-driver-3.141.59.jar
+file.reference.selenium-support-3.141.59.jar=C:\\Users\\dev\\Desktop\\selenium\\selenium-support-3.141.59.jar
+file.reference.sentry-1.7.21.jar=C:\\Users\\dev\\Desktop\\sentry\\sentry-1.7.21.jar
+file.reference.serializer-2.7.2.jar=C:\\Users\\dev\\Desktop\\selenium\\serializer-2.7.2.jar
+file.reference.slf4j-api-1.7.24.jar=C:\\Users\\dev\\Desktop\\sentry\\slf4j-api-1.7.24.jar
+file.reference.socket.io-client-1.0.0.jar=C:\\Users\\dev\\Desktop\\lib\\socket.io-client-1.0.0.jar
 file.reference.tyrus-standalone-client-1.9.jar=C:\\Users\\dev\\Downloads\\tyrus-standalone-client-1.9.jar
+file.reference.websocket-api-9.4.12.v20180830.jar=C:\\Users\\dev\\Desktop\\selenium\\websocket-api-9.4.12.v20180830.jar
+file.reference.websocket-client-9.4.12.v20180830.jar=C:\\Users\\dev\\Desktop\\selenium\\websocket-client-9.4.12.v20180830.jar
+file.reference.websocket-common-9.4.12.v20180830.jar=C:\\Users\\dev\\Desktop\\selenium\\websocket-common-9.4.12.v20180830.jar
+file.reference.xalan-2.7.2.jar=C:\\Users\\dev\\Desktop\\selenium\\xalan-2.7.2.jar
+file.reference.xercesImpl-2.12.0.jar=C:\\Users\\dev\\Desktop\\selenium\\xercesImpl-2.12.0.jar
+file.reference.xml-apis-1.4.01.jar=C:\\Users\\dev\\Desktop\\selenium\\xml-apis-1.4.01.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
@@ -66,7 +121,62 @@ javac.classpath=\
     ${file.reference.gson-2.8.5.jar}:\
     ${file.reference.controlsfx-8.40.13.jar}:\
     ${file.reference.tyrus-standalone-client-1.9.jar}:\
-    ${file.reference.jfoenix-8.0.8.jar}
+    ${file.reference.jfoenix-8.0.8.jar}:\
+    ${file.reference.animal-sniffer-annotations-1.14.jar}:\
+    ${file.reference.byte-buddy-1.8.15.jar}:\
+    ${file.reference.checker-compat-qual-2.0.0.jar}:\
+    ${file.reference.commons-codec-1.10.jar}:\
+    ${file.reference.commons-exec-1.3.jar}:\
+    ${file.reference.commons-io-2.6.jar}:\
+    ${file.reference.commons-lang3-3.8.jar}:\
+    ${file.reference.commons-logging-1.2.jar-1}:\
+    ${file.reference.commons-net-3.6.jar}:\
+    ${file.reference.commons-text-1.4.jar}:\
+    ${file.reference.error_prone_annotations-2.1.3.jar}:\
+    ${file.reference.guava-25.0-jre.jar}:\
+    ${file.reference.htmlunit-2.33.jar}:\
+    ${file.reference.htmlunit-core-js-2.33.jar}:\
+    ${file.reference.htmlunit-cssparser-1.2.0.jar}:\
+    ${file.reference.htmlunit-driver-2.33.3.jar}:\
+    ${file.reference.httpclient-4.5.6.jar}:\
+    ${file.reference.httpcore-4.4.10.jar}:\
+    ${file.reference.httpmime-4.5.6.jar}:\
+    ${file.reference.j2objc-annotations-1.1.jar}:\
+    ${file.reference.jetty-client-9.4.12.v20180830.jar}:\
+    ${file.reference.jetty-http-9.4.12.v20180830.jar}:\
+    ${file.reference.jetty-io-9.4.12.v20180830.jar}:\
+    ${file.reference.jetty-util-9.4.12.v20180830.jar}:\
+    ${file.reference.jetty-xml-9.4.12.v20180830.jar}:\
+    ${file.reference.jsr305-1.3.9.jar}:\
+    ${file.reference.neko-htmlunit-2.33.jar}:\
+    ${file.reference.okhttp-3.11.0.jar}:\
+    ${file.reference.okio-1.14.0.jar}:\
+    ${file.reference.selenium-api-3.141.59.jar}:\
+    ${file.reference.selenium-remote-driver-3.141.59.jar}:\
+    ${file.reference.selenium-support-3.141.59.jar}:\
+    ${file.reference.serializer-2.7.2.jar}:\
+    ${file.reference.websocket-api-9.4.12.v20180830.jar}:\
+    ${file.reference.websocket-client-9.4.12.v20180830.jar}:\
+    ${file.reference.websocket-common-9.4.12.v20180830.jar}:\
+    ${file.reference.xalan-2.7.2.jar}:\
+    ${file.reference.xercesImpl-2.12.0.jar}:\
+    ${file.reference.xml-apis-1.4.01.jar}:\
+    ${file.reference.client-combined-3.141.59.jar}:\
+    ${file.reference.jackson-core-2.8.7.jar}:\
+    ${file.reference.sentry-1.7.21.jar}:\
+    ${file.reference.slf4j-api-1.7.24.jar}:\
+    ${file.reference.socket.io-client-1.0.0.jar}:\
+    ${file.reference.okhttp-3.8.1.jar}:\
+    ${file.reference.engine.io-client-1.0.0.jar}:\
+    ${file.reference.json-20090211.jar}:\
+    ${file.reference.client-combined-3.141.59-sources.jar}:\
+    ${file.reference.client-combined-3.141.59.jar-1}:\
+    ${file.reference.guava-23.0.jar}:\
+    ${file.reference.htmlunit-2.33-OSGi.jar}:\
+    ${file.reference.htmlunit-driver-2.33.3.jar-1}:\
+    ${file.reference.okhttp-3.13.1.jar}:\
+    ${file.reference.pusher-java-client-1.8.1.jar}:\
+    ${file.reference.pusher-java-client-1.8.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -141,7 +251,7 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-native.bundling.enabled=false
+native.bundling.enabled=true
 platform.active=default_platform
 run.classpath=\
     ${dist.jar}:\
